--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "package.json",
-  "version": "0.0.0",
+  "name": "edu-management-frontend",
+  "version": "0.1.0",
   "private": true,
   "type": "module",
   "scripts": {
