feat(backend): 实现教育管理系统后端基础架构
- 搭建FastAPI应用框架，配置CORS中间件
- 实现用户认证与授权系统，包括JWT认证
- 创建用户、角色、权限管理模块
- 实现教师、学生、部门等核心实体模型
- 设计课程、开课、排课等教学管理功能
- 添加学籍管理和奖惩管理模块
- 构建统计数据API接口
- 配置SQLAlchemy ORM与数据库连接
- 添加必要的依赖项和配置文件

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ frontend/.env.local
 frontend/.env.*.local
 frontend/.env.development
 frontend/.env.production
+frontend/package-lock.json
 
 # 日志
 frontend/npm-debug.log*
